feat: add OpenAI token and API config to dot_czrc.tmpl, extend lazygit commands

--- a/home/private_dot_config/lazygit/config.yml
+++ b/home/private_dot_config/lazygit/config.yml
@@ -5,3 +5,9 @@ customCommands:
     context: "files"
     loadingText: "opening commitizen commit tool"
     subprocess: true
+  - key: "G"
+    command: "git cz ai"
+    description: "generate commit message"
+    context: "files"
+    loadingText: "opening commitizen commit tool"
+    subprocess: true
