fix: add ripgrep package and increase starship command timeout

--- a/home/private_dot_config/starship.toml
+++ b/home/private_dot_config/starship.toml
@@ -26,6 +26,7 @@ $character\
 
 palette = 'tokyo_night'
 add_newline = true
+command_timeout = 5000
 
 [palettes.tokyo_night]
 foreground = '#D8D8D8'
