chore(mcp): migrate from npx context7 to context7-marketplace submodule
- 从使用npx安装的@upstash/context7-mcp迁移到context7-marketplace子模块
- 移除旧的context7 MCP服务器配置
- 添加新的context7-marketplace子模块
- 更新相关权限配置
- 启用context7-plugin插件

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "home/dot_claude/plugins/marketplaces/external_claude-plugins-official"]
 	path = home/dot_claude/plugins/marketplaces/external_claude-plugins-official
 	url = https://github.com/anthropics/claude-plugins-official
+[submodule "home/dot_claude/plugins/marketplaces/external_context7-marketplace"]
+	path = home/dot_claude/plugins/marketplaces/external_context7-marketplace
+	url = https://github.com/upstash/context7.git
