--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,23 +1,9 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/en/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
-
 version: 2
 updates:
-  # Enable version updates for submodules
   - package-ecosystem: "gitsubmodule"
     directory: "/"
     schedule:
-      interval: "daily"
-      time: "10:00"
+      interval: "monthly"
       timezone: "Asia/Shanghai"
-    # Allow updates to submodules
     allow:
       - dependency-type: "direct"
-    # You can add specific labels or assignees if needed
-    # labels:
-    #   - "dependencies"
-    #   - "submodule-update"
-    # assignees:
-    #   - "your-username"
